--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "MtbTk"
 version = "0.0.3"
 authors = [{ name = "TianyiLu", email = "tianyi9494@gmail.com" }]
-description = "MtbTk: Mycobacterium tuberculosis Genomics Analysis Toolkit."
+description = "MtbTk: Genomics Analysis Toolkit for Mycobacterium Tuberculosis."
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
